chore: misc changes

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "deploy":"sh ./deploy.sh"
+    "deploy":"gh-pages -d dist"
   },
   "dependencies": {
     "@animxyz/core": "^0.6.6",
